# BeatSaber-Quest-Codegen

./: .clang-format  .gitignore  Android.mk  Application.mk  CMakeLists.txt  bmbfmod.json  build.ps1  copy.ps1  create_pch.ts  createqmod.ps1  deno.json  mod.template.json  qpm.json  qpm.shared.json
.github/actions/: app-update.yml
.github/workflows/: buildndk.yml  check-for-updates.yml  publish.yml
include/: _config.hpp
include/AOT/: AOT.hpp  MonoPInvokeCallbackAttribute.hpp  zzzz__MonoPInvokeCallbackAttribute_def.hpp  zzzz__MonoPInvokeCallbackAttribute_impl.hpp
include/BeatmapEditor3D/: BeatmapEditor3D.hpp  BeatmapEditorStandardLevelScenesTransitionSetupDataSO.hpp  zzzz__BeatmapEditorStandardLevelScenesTransitionSetupDataSO_def.hpp  zzzz__BeatmapEditorStandardLevelScenesTransitionSetupDataSO_impl.hpp
include/BeatmapSaveDataVersion2_6_0AndEarlier/: BeatmapSaveData.hpp  BeatmapSaveDataItem.hpp  BeatmapSaveDataVersion2_6_0AndEarlier.hpp  BeatmapSaveData_BeatmapObjectType.hpp  BeatmapSaveData_ColorType.hpp  BeatmapSaveData_EventData.hpp  (+13 more)
src/: main.cpp  main_0.cpp  main_100.cpp  main_1000.cpp  main_10000.cpp  main_10100.cpp  main_10200.cpp  main_10300.cpp  main_10400.cpp  main_10500.cpp  main_10600.cpp  main_10700.cpp  main_10800.cpp  main_10900.cpp  main_1100.cpp  main_11000.cpp  main_11100.cpp  main_11200.cpp  main_11300.cpp  main_11400.cpp  main_11500.cpp  main_11600.cpp  main_11700.cpp  main_11800.cpp  main_11900.cpp  main_1200.cpp  main_12000.cpp  main_12100.cpp  main_12200.cpp  main_12300.cpp  main_12400.cpp  main_12500.cpp  main_12600.cpp  main_12700.cpp  main_12800.cpp  main_12900.cpp  main_1300.cpp  main_13000.cpp  main_13100.cpp  main_13200.cpp  (+96 more)
(+52218 files in other folders)
